# LinGallery

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  gradle.properties  requirements.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/main/resources/i18n/: strings.properties
gradle/: libs.versions.toml
native/: Cargo.toml
native/src/: lib.rs  main.rs
src/: main.py
src/core/: constants.py  icons.py
src/logic/: image_loader.py  image_manager.py  library_indexer.py
src/processing/: image_ops.py
src/pymaterial/: __init__.py
src/pymaterial/adapters/: __init__.py
src/pymaterial/adapters/pyside6/: __init__.py  builder.py
src/pymaterial/components/: __init__.py  appbars.py  buttons.py  cards.py  chips.py  dialogs.py  divider.py  example.py  forms.py  grid.py  icon.py  image.py  layout.py  lists.py  menus.py  scroll.py  statusbar.py  text.py  textfields.py
src/pymaterial/core/: __init__.py  component.py  context.py  slots.py
src/pymaterial/events/: __init__.py  events.py
src/pymaterial/renderer/: __init__.py  interface.py
src/pymaterial/state/: __init__.py  state.py
src/pymaterial/theme/: __init__.py  dark_theme.py  light_theme.py  theme.py
src/pymaterial/tokens/: __init__.py  color.py  elevation.py  motion.py  shape.py  spacing.py  typography.py
src/storage/: cache_manager.py
src/ui/: main_window.py  material_bridge.py
src/ui/components/: icon_button.py  material_dialog.py
src/ui/gallery/: album_panel.py  gallery_view.py
src/ui/viewer/: edit_toolbar.py  image_viewer.py  refactor.py  slideshow_controller.py
(+75 files in other folders)
